htdocs/theme/pcnz/sass/layout/_header.scss
.header {
    .logo {
        padding: 1.9375rem 0.375rem 1.9375rem 0; // 31px 6px 31px 0
        display: inline-block;
        height: $navbar-height;

        // When small logo is uploaded 'change-to-small' class is added.
        &.change-to-small {
          display: none;
          @include media-breakpoint-up(md) {
              display: inline-block;
          }
        }
    }

    .logoxs {
        margin: 1.25rem 0; // 20px 0;
        height: 5rem; // 80px
        @include media-breakpoint-up(md) {
          display: none;
        }
    }
}

